; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/ee/extr_ee.c_no_info_window.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/ee/extr_ee.c_no_info_window.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@info_window = common dso_local global i64 0, align 8
@info_win = common dso_local global i32 0, align 4
@text_win = common dso_local global i32 0, align 4
@FALSE = common dso_local global i64 0, align 8
@LINES = common dso_local global i64 0, align 8
@last_line = common dso_local global i64 0, align 8
@COLS = common dso_local global i32 0, align 4
@TRUE = common dso_local global i32 0, align 4
@scr_vert = common dso_local global i32 0, align 4
@point = common dso_local global i32 0, align 4
@clear_com_win = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @no_info_window() #0 {
  %1 = load i64, i64* @info_window, align 8
  %2 = icmp ne i64 %1, 0
  br i1 %2, label %4, label %3

3:                                                ; preds = %0
  br label %31

4:                                                ; preds = %0
  %5 = load i32, i32* @info_win, align 4
  %6 = call i32 @delwin(i32 %5)
  %7 = load i32, i32* @text_win, align 4
  %8 = call i32 @delwin(i32 %7)
  %9 = load i64, i64* @FALSE, align 8
  store i64 %9, i64* @info_window, align 8
  %10 = load i64, i64* @LINES, align 8
  %11 = sub nsw i64 %10, 2
  store i64 %11, i64* @last_line, align 8
  %12 = load i64, i64* @LINES, align 8
  %13 = sub nsw i64 %12, 1
  %14 = load i32, i32* @COLS, align 4
  %15 = call i32 @newwin(i64 %13, i32 %14, i32 0, i32 0)
  store i32 %15, i32* @text_win, align 4
  %16 = load i32, i32* @text_win, align 4
  %17 = load i32, i32* @TRUE, align 4
  %18 = call i32 @keypad(i32 %16, i32 %17)
  %19 = load i32, i32* @text_win, align 4
  %20 = load i32, i32* @TRUE, align 4
  %21 = call i32 @idlok(i32 %19, i32 %20)
  %22 = load i32, i32* @text_win, align 4
  %23 = load i32, i32* @TRUE, align 4
  %24 = call i32 @clearok(i32 %22, i32 %23)
  %25 = load i32, i32* @scr_vert, align 4
  %26 = load i32, i32* @point, align 4
  %27 = call i32 @midscreen(i32 %25, i32 %26)
  %28 = load i32, i32* @text_win, align 4
  %29 = call i32 @wrefresh(i32 %28)
  %30 = load i32, i32* @TRUE, align 4
  store i32 %30, i32* @clear_com_win, align 4
  br label %31

31:                                               ; preds = %4, %3
  ret void
}

declare dso_local i32 @delwin(i32) #1

declare dso_local i32 @newwin(i64, i32, i32, i32) #1

declare dso_local i32 @keypad(i32, i32) #1

declare dso_local i32 @idlok(i32, i32) #1

declare dso_local i32 @clearok(i32, i32) #1

declare dso_local i32 @midscreen(i32, i32) #1

declare dso_local i32 @wrefresh(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
